[gd_scene load_steps=4 format=2]

[ext_resource path="res://SourceHanSansCN-Normal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://daojvxitong/CunDang.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="CunDang" type="Node2D"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 192.0
margin_top = 128.0
margin_right = 448.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "保存进度"

[node name="Button2" type="Button" parent="."]
margin_left = 192.0
margin_top = 256.0
margin_right = 448.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 1 )
text = "读取进度"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 192.0
margin_top = 384.0
margin_right = 448.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 1 )
text = "返回"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 704.0
margin_top = 512.0
margin_right = 960.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 1 )
text = "离开游戏"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
